auto publishing updates to notebooks

--- a/arellano.ipynb
+++ b/arellano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "18c95c01",
+   "id": "d9268219",
    "metadata": {},
    "source": [
     "# Default Risk and Income Fluctuations"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d816dc",
+   "id": "f2dbaa9e",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21e38c22",
+   "id": "45eb00f0",
    "metadata": {
     "hide-output": false
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1db1065c",
+   "id": "7ee7b717",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc405bdc",
+   "id": "6dbfa756",
    "metadata": {
     "hide-output": false
    },
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddd1222",
+   "id": "df69322c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9e42cb6f",
+   "id": "b8adeabb",
    "metadata": {
     "hide-output": false
    },
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "939dec91",
+   "id": "695c4aaa",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db9d1197",
+   "id": "5a55a63d",
    "metadata": {
     "hide-output": false
    },
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8a39e56",
+   "id": "53febde7",
    "metadata": {},
    "source": [
     "## Structure\n",
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "311b8167",
+   "id": "0fb0c9da",
    "metadata": {},
    "source": [
     "### Output, Consumption and Debt\n",
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8b32ece",
+   "id": "b32713d8",
    "metadata": {},
    "source": [
     "### Asset Markets\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3aee7f69",
+   "id": "5de65ac2",
    "metadata": {},
    "source": [
     "### Financial Markets\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5159841a",
+   "id": "a60505c4",
    "metadata": {},
    "source": [
     "### Government’s Decisions\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4bc0c8aa",
+   "id": "53edf27d",
    "metadata": {},
    "source": [
     "### Reentering International Credit Market\n",
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9aeeeb7",
+   "id": "52eb3bc9",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ff1c894",
+   "id": "71e59c40",
    "metadata": {},
    "source": [
     "### Definition of Equilibrium\n",
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ec7a60",
+   "id": "467e940f",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -479,7 +479,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac963f1f",
+   "id": "0163fb80",
    "metadata": {
     "hide-output": false
    },
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6699acf0",
+   "id": "ee3285d6",
    "metadata": {},
    "source": [
     "Here is the utility function."
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6780b4dd",
+   "id": "f2c46a0f",
    "metadata": {
     "hide-output": false
    },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "204bba1f",
+   "id": "2ad4b6d5",
    "metadata": {},
    "source": [
     "Here is a function to compute the bond price at each state, given $ v_c $ and\n",
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64914c5f",
+   "id": "c0b40328",
    "metadata": {
     "hide-output": false
    },
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89c897e2",
+   "id": "798d119c",
    "metadata": {},
    "source": [
     "Next we introduce Bellman operators that updated $ v_d $ and $ v_c $."
@@ -608,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5455f219",
+   "id": "9eb5d762",
    "metadata": {
     "hide-output": false
    },
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7c2b4b2",
+   "id": "87554f0a",
    "metadata": {
     "hide-output": false
    },
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f61bd555",
+   "id": "ca57b84d",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "636dfadc",
+   "id": "73e72f35",
    "metadata": {
     "hide-output": false
    },
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "751da8aa",
+   "id": "48235859",
    "metadata": {},
    "source": [
     "Let’s make JIT-compiled versions of these functions, with the sizes of the arrays declared as static (compile-time constants) in order to help the compiler."
@@ -716,7 +716,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4afe996",
+   "id": "56ed2b27",
    "metadata": {
     "hide-output": false
    },
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f188f956",
+   "id": "15102ab3",
    "metadata": {},
    "source": [
     "Here is a function that calls these operators in the right sequence."
@@ -740,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8192262",
+   "id": "ecfaf387",
    "metadata": {
     "hide-output": false
    },
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a56cceaf",
+   "id": "aea7ae27",
    "metadata": {},
    "source": [
     "We can now write a function that will use the `Arellano_Economy` class and the\n",
@@ -771,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ee81b20",
+   "id": "e38310a7",
    "metadata": {
     "hide-output": false
    },
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61b1a63c",
+   "id": "407c6ee0",
    "metadata": {},
    "source": [
     "Let’s try solving the model."
@@ -820,7 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a96f6b5",
+   "id": "f3737be8",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9dcc014",
+   "id": "5bb6a6f8",
    "metadata": {
     "hide-output": false
    },
@@ -844,7 +844,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "489af85a",
+   "id": "fbe9635d",
    "metadata": {
     "hide-output": false
    },
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e7ef43a",
+   "id": "c0885fcd",
    "metadata": {},
    "source": [
     "Finally, we write a function that will allow us to simulate the economy once\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09aa8340",
+   "id": "90dac70e",
    "metadata": {
     "hide-output": false
    },
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdd5c027",
+   "id": "81c66827",
    "metadata": {},
    "source": [
     "## Results\n",
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bd8b4926",
+   "id": "8cd181cd",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1019,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1317aa68",
+   "id": "7399a2b3",
    "metadata": {},
    "source": [
     "## Exercise 13.1\n",
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c0bd40c",
+   "id": "b32a09d7",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 13.1](https://jax.quantecon.org/#arellano_ex1)\n",
@@ -1045,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "461c3788",
+   "id": "61fee613",
    "metadata": {
     "hide-output": false
    },
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bbbb7320",
+   "id": "56aa530f",
    "metadata": {},
    "source": [
     "Compute the bond price schedule as seen in figure 3 of Arellano (2008)"
@@ -1066,7 +1066,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "054e7f90",
+   "id": "775aa840",
    "metadata": {
     "hide-output": false
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dcd18e5",
+   "id": "178556b8",
    "metadata": {},
    "source": [
     "Draw a plot of the value functions"
@@ -1111,7 +1111,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bf9b48d",
+   "id": "1ace514e",
    "metadata": {
     "hide-output": false
    },
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "739a3336",
+   "id": "8d737f93",
    "metadata": {},
    "source": [
     "Draw a heat map for default probability"
@@ -1140,7 +1140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5dc745f8",
+   "id": "8e4843f0",
    "metadata": {
     "hide-output": false
    },
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b16561f",
+   "id": "8eded5d4",
    "metadata": {},
    "source": [
     "Plot a time series of major variables simulated from the model"
@@ -1176,7 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c01897d7",
+   "id": "ed9ea74e",
    "metadata": {
     "hide-output": false
    },
@@ -1195,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35098bca",
+   "id": "f7bdf7bb",
    "metadata": {
     "hide-output": false
    },
@@ -1240,7 +1240,7 @@
   }
  ],
  "metadata": {
-  "date": 1695173318.2821512,
+  "date": 1695354741.062698,
   "filename": "arellano.md",
   "kernelspec": {
    "display_name": "Python",
