--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "db2ecd00",
+   "id": "64d01eac",
    "metadata": {},
    "source": [
     "# Newton’s Method via JAX"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "59fdf50f",
+   "id": "c843caa5",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a99880fc",
+   "id": "f7c460b2",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5cf9461",
+   "id": "3098b552",
    "metadata": {
     "hide-output": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d74feeb1",
+   "id": "a747d1de",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -73,7 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b8d95365",
+   "id": "c6882fbb",
    "metadata": {
     "hide-output": false
    },
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "432a50c6",
+   "id": "b48c2e47",
    "metadata": {},
    "source": [
     "## Newton in one dimension\n",
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "093a2357",
+   "id": "b869806f",
    "metadata": {
     "hide-output": false
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f707a501",
+   "id": "3804b00b",
    "metadata": {},
    "source": [
     "The code above uses automatic differentiation to calculate $ f' $ via the call to `jax.grad`.\n",
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d4d72a8",
+   "id": "6f4e5b9f",
    "metadata": {
     "hide-output": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2844a84",
+   "id": "12d35333",
    "metadata": {},
    "source": [
     "Here we go"
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c703ff0",
+   "id": "69f53f02",
    "metadata": {
     "hide-output": false
    },
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f35fd51",
+   "id": "4c40cb77",
    "metadata": {},
    "source": [
     "This number looks to be close to the root, given the figure."
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13dceed0",
+   "id": "c0d38adf",
    "metadata": {},
    "source": [
     "## An Equilibrium Problem\n",
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6726381",
+   "id": "271d309f",
    "metadata": {
     "hide-output": false
    },
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf0ac91f",
+   "id": "b2221548",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44b07a52",
+   "id": "54ef2a35",
    "metadata": {},
    "source": [
     "### Newton’s Method\n",
@@ -290,7 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f284405",
+   "id": "4e55238b",
    "metadata": {
     "hide-output": false
    },
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7a4f261",
+   "id": "50d9f132",
    "metadata": {},
    "source": [
     "### Application\n",
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb9f13a2",
+   "id": "6f025aad",
    "metadata": {
     "hide-output": false
    },
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae13d503",
+   "id": "ed29d8ce",
    "metadata": {},
    "source": [
     "Here’s our initial condition $ p_0 $"
@@ -366,7 +366,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "233c985d",
+   "id": "3438423e",
    "metadata": {
     "hide-output": false
    },
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cf2b4f6",
+   "id": "ea85b740",
    "metadata": {},
    "source": [
     "By combining the power of Newton’s method, JAX accelerated linear algebra,\n",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23286ae8",
+   "id": "d25a4409",
    "metadata": {
     "hide-output": false
    },
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc9ecd3b",
+   "id": "2b93105a",
    "metadata": {},
    "source": [
     "Here’s the size of the error:"
@@ -410,7 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c66011",
+   "id": "e1a778ad",
    "metadata": {
     "hide-output": false
    },
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffbd21d1",
+   "id": "7ece003b",
    "metadata": {},
    "source": [
     "With the same tolerance, SciPy’s `root` function takes much longer to run,\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2fcc4a89",
+   "id": "b7e5d797",
    "metadata": {
     "hide-output": false
    },
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e663ab4c",
+   "id": "8c079c14",
    "metadata": {},
    "source": [
     "The result is also slightly less accurate:"
@@ -457,7 +457,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "083271b0",
+   "id": "dbb64bd8",
    "metadata": {
     "hide-output": false
    },
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfcec24c",
+   "id": "353760bc",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f58996ee",
+   "id": "e001467b",
    "metadata": {},
    "source": [
     "## Exercise 3.1\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78864cc4",
+   "id": "feffa453",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.1](https://jax.quantecon.org/#newton_ex1)\n",
@@ -548,7 +548,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10cef81a",
+   "id": "bd0b1ca6",
    "metadata": {
     "hide-output": false
    },
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29450880",
+   "id": "1c3f2163",
    "metadata": {},
    "source": [
     "Then we define the multivariate version of the formula for the [law of motion of capital](https://python.quantecon.org/newton_method.html#solow)"
@@ -576,7 +576,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb05e02c",
+   "id": "64950ba9",
    "metadata": {
     "hide-output": false
    },
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "741649d9",
+   "id": "e3279323",
    "metadata": {},
    "source": [
     "Let’s run through each starting value and see the output"
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66946779",
+   "id": "3d6cc5bb",
    "metadata": {
     "hide-output": false
    },
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbe785d5",
+   "id": "eca4bfb6",
    "metadata": {},
    "source": [
     "We find that the results are invariant to the starting values.\n",
@@ -627,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7547fc8d",
+   "id": "ee98ee60",
    "metadata": {
     "hide-output": false
    },
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cdfcd64",
+   "id": "72d507d7",
    "metadata": {},
    "source": [
     "Note the error is very small.\n",
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "803c35de",
+   "id": "5377eb25",
    "metadata": {
     "hide-output": false
    },
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a4c8e6fd",
+   "id": "3fe1f398",
    "metadata": {},
    "source": [
     "The result is very close to the true solution but still slightly different.\n",
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41b558de",
+   "id": "4ac91efc",
    "metadata": {
     "hide-output": false
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7375a632",
+   "id": "5d8b8fe4",
    "metadata": {},
    "source": [
     "We can see it steps towards a more accurate solution."
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac493cd9",
+   "id": "895aaa4e",
    "metadata": {},
    "source": [
     "## Exercise 3.2\n",
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f89c4c0e",
+   "id": "254ee329",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 3.2](https://jax.quantecon.org/#newton_ex2)\n",
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ccaf2c5",
+   "id": "be54214c",
    "metadata": {
     "hide-output": false
    },
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6009121d",
+   "id": "42250ba6",
    "metadata": {},
    "source": [
     "Let’s run through each initial guess and check the output"
@@ -789,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6623d715",
+   "id": "a4877b99",
    "metadata": {
     "hide-output": false
    },
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dec1ca3e",
+   "id": "1eaf584e",
    "metadata": {},
    "source": [
     "We can find that Newton’s method may fail for some starting values.\n",
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37e0397a",
+   "id": "95a8eba8",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a39c23af",
+   "id": "7e758ba3",
    "metadata": {},
    "source": [
     "We can see the result is very accurate."
@@ -840,7 +840,7 @@
   }
  ],
  "metadata": {
-  "date": 1695173318.852461,
+  "date": 1695354741.5892615,
   "filename": "newtons_method.md",
   "kernelspec": {
    "display_name": "Python",
