--- a/opt_invest.ipynb
+++ b/opt_invest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c5ec6d93",
+   "id": "d4c42d6a",
    "metadata": {},
    "source": [
     "# Optimal Investment"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be2d3af1",
+   "id": "63543039",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "790110b6",
+   "id": "6f6af56c",
    "metadata": {
     "hide-output": false
    },
@@ -38,11 +38,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d215ceb7",
+   "id": "606c5a3a",
    "metadata": {},
    "source": [
-    "A monopolist faces inverse demand\n",
-    "curve\n",
+    "We study a monopolist who faces inverse demand curve\n",
     "\n",
     "$$\n",
     "P_t = a_0 - a_1 Y_t + Z_t,\n",
@@ -55,7 +54,7 @@
     "- $ Z_t $ is a demand shock.  \n",
     "\n",
     "\n",
-    "We assume that $ Z_t $ is a discretized AR(1) process.\n",
+    "We assume that $ Z_t $ is a discretized AR(1) process, specified below.\n",
     "\n",
     "Current profits are\n",
     "\n",
@@ -85,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f07738b",
+   "id": "7f689752",
    "metadata": {
     "hide-output": false
    },
@@ -99,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec4051f",
+   "id": "cc6db92c",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -108,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5b0c9e4",
+   "id": "685ed485",
    "metadata": {
     "hide-output": false
    },
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfe7c091",
+   "id": "be77e1c5",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -128,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daa4def2",
+   "id": "513135ac",
    "metadata": {
     "hide-output": false
    },
@@ -139,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74cc8500",
+   "id": "8953ecda",
    "metadata": {},
    "source": [
     "We need the following successive approximation function."
@@ -148,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63b8e05f",
+   "id": "f4ad35c5",
    "metadata": {
     "hide-output": false
    },
@@ -179,7 +178,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6b1a7e7",
+   "id": "ec4eeb33",
    "metadata": {},
    "source": [
     "Let’s define a function to create an investment model using the given parameters."
@@ -188,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d2e39886",
+   "id": "c713f078",
    "metadata": {
     "hide-output": false
    },
@@ -222,11 +221,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efaaf37b",
+   "id": "91ba045f",
    "metadata": {},
    "source": [
     "Let’s re-write the vectorized version of the right-hand side of the\n",
-    "Bellman equation (before maximization), which is a 3D array representing:\n",
+    "Bellman equation (before maximization), which is a 3D array representing\n",
     "\n",
     "$$\n",
     "B(y, z, y') = r(y, z, y') + \\beta \\sum_{z'} v(y', z') Q(z, z')\n",
@@ -238,7 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "652dfcbe",
+   "id": "9560c849",
    "metadata": {
     "hide-output": false
    },
@@ -275,16 +274,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67f34161",
+   "id": "dda1adf6",
    "metadata": {},
    "source": [
-    "Define a function to compute the current rewards given policy $ \\sigma $."
+    "We define a function to compute the current rewards $ r_\\sigma $ given policy $ \\sigma $,\n",
+    "which is defined as the vector\n",
+    "\n",
+    "$$\n",
+    "r_\\sigma(y, z) := r(y, z, \\sigma(y, z))\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc92f37a",
+   "id": "a156ca96",
    "metadata": {
     "hide-output": false
    },
@@ -316,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11850d55",
+   "id": "e08de832",
    "metadata": {},
    "source": [
     "Define the Bellman operator."
@@ -325,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fccb0df3",
+   "id": "3515f23d",
    "metadata": {
     "hide-output": false
    },
@@ -340,7 +344,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e82b061",
+   "id": "cd89a695",
    "metadata": {},
    "source": [
     "The following function computes a v-greedy policy."
@@ -349,7 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7a7921a",
+   "id": "4e044796",
    "metadata": {
     "hide-output": false
    },
@@ -364,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "476a266f",
+   "id": "9b894dd7",
    "metadata": {},
    "source": [
     "Define the $ \\sigma $-policy operator."
@@ -373,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce8b31cd",
+   "id": "edbfdc2a",
    "metadata": {
     "hide-output": false
    },
@@ -408,64 +412,52 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28b347f3",
+   "id": "0549982f",
    "metadata": {},
    "source": [
     "Next, we want to computes the lifetime value of following policy $ \\sigma $.\n",
     "\n",
-    "The basic problem is to solve the linear system\n",
+    "This lifetime value is a function $ v_\\sigma $ that satisfies\n",
     "\n",
     "$$\n",
-    "v(y, z) = r(y, z, \\sigma(y, z)) + \\beta \\sum_{z'} v(\\sigma(y, z), z') Q(z, z)\n",
+    "v_\\sigma(y, z) = r_\\sigma(y, z) + \\beta \\sum_{z'} v_\\sigma(\\sigma(y, z), z') Q(z, z')\n",
     "$$\n",
     "\n",
-    "for $ v $.\n",
+    "We wish to solve this equation for $ v_\\sigma $.\n",
     "\n",
-    "It turns out to be helpful to rewrite this as\n",
-    "\n",
-    "$$\n",
-    "v(y, z) = r(y, z, \\sigma(y, z)) + \\beta \\sum_{y', z'} v(y', z') P_\\sigma(y, z, y', z')\n",
-    "$$\n",
-    "\n",
-    "where $ P_\\sigma(y, z, y', z') = 1\\{y' = \\sigma(y, z)\\} Q(z, z') $.\n",
-    "\n",
-    "We want to write this as $ v = r_\\sigma + \\beta P_\\sigma v $ and then solve for $ v $\n",
-    "\n",
-    "Note, however, that $ v $ is a multi-index array, rather than a vector.\n",
-    "\n",
-    "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
+    "Suppose we define the linear operator $ L_\\sigma $ by\n",
     "\n",
     "$$\n",
-    "v_{\\sigma} = (I - \\beta P_{\\sigma})^{-1} r_{\\sigma}\n",
+    "(L_\\sigma v)(y, z) = v(y, z) - \\beta \\sum_{z'} v(\\sigma(y, z), z') Q(z, z')\n",
     "$$\n",
     "\n",
-    "Here we set up the linear map $ v \\mapsto R_{\\sigma} v $,\n",
-    "\n",
-    "where $ R_{\\sigma} := I - \\beta P_{\\sigma} $\n",
-    "\n",
-    "In the investment problem, this map can be expressed as\n",
+    "With this notation, the problem is to solve for $ v $ via\n",
     "\n",
     "$$\n",
-    "(R_{\\sigma} v)(y, z) = v(y, z) - \\beta \\sum_{z'} v(\\sigma(y, z), z') Q(z, z')\n",
+    "(L_{\\sigma} v)(y, z) = r_\\sigma(y, z)\n",
     "$$\n",
     "\n",
-    "Defining the map as above works in a more intuitive multi-index setting\n",
-    "(e.g. working with $ v[i, j] $ rather than flattening v to a one-dimensional\n",
-    "array) and avoids instantiating the large matrix $ P_{\\sigma} $.\n",
+    "In vector for this is $ L_\\sigma v = r_\\sigma $, which tells us that the function\n",
+    "we seek is\n",
     "\n",
-    "Let’s define the function $ R_{\\sigma} $."
+    "$$\n",
+    "v_\\sigma = L_\\sigma^{-1} r_\\sigma\n",
+    "$$\n",
+    "\n",
+    "JAX allows us to solve linear systems defined in terms of operators; the first\n",
+    "step is to define the function $ L_{\\sigma} $."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abd8667c",
+   "id": "7af617e8",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "def R_σ(v, σ, constants, sizes, arrays):\n",
+    "def L_σ(v, σ, constants, sizes, arrays):\n",
     "\n",
     "    β, a_0, a_1, γ, c = constants\n",
     "    y_size, z_size = sizes\n",
@@ -483,22 +475,21 @@
     "    # Compute and return v[i, j] - β Σ_jp v[σ[i, j], jp] * Q[j, jp]\n",
     "    return v - β * jnp.sum(V * Q, axis=2)\n",
     "\n",
-    "R_σ = jax.jit(R_σ, static_argnums=(3,))"
+    "L_σ = jax.jit(L_σ, static_argnums=(3,))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e34705c4",
+   "id": "84b2ae7e",
    "metadata": {},
    "source": [
-    "Define a function to get the value $ v_{\\sigma} $ of policy\n",
-    "$ \\sigma $ by inverting the linear map $ R_{\\sigma} $."
+    "Now we can define a function to compute $ v_{\\sigma} $"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20c33e6b",
+   "id": "3c75d421",
    "metadata": {
     "hide-output": false
    },
@@ -513,26 +504,26 @@
     "\n",
     "    r_σ = compute_r_σ(σ, constants, sizes, arrays)\n",
     "\n",
-    "    # Reduce R_σ to a function in v\n",
-    "    partial_R_σ = lambda v: R_σ(v, σ, constants, sizes, arrays)\n",
+    "    # Reduce L_σ to a function in v\n",
+    "    partial_L_σ = lambda v: L_σ(v, σ, constants, sizes, arrays)\n",
     "\n",
-    "    return jax.scipy.sparse.linalg.bicgstab(partial_R_σ, r_σ)[0]\n",
+    "    return jax.scipy.sparse.linalg.bicgstab(partial_L_σ, r_σ)[0]\n",
     "\n",
     "get_value = jax.jit(get_value, static_argnums=(2,))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a9bbab96",
+   "id": "13bf231f",
    "metadata": {},
    "source": [
-    "Now we define the solvers, which implement VFI, HPI and OPI."
+    "Finally, we introduce the solvers that implement VFI, HPI and OPI."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3906443b",
+   "id": "d4812715",
    "metadata": {
     "hide-output": false
    },
@@ -552,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb186557",
+   "id": "078b5c45",
    "metadata": {
     "hide-output": false
    },
@@ -577,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87723317",
+   "id": "dd74d504",
    "metadata": {
     "hide-output": false
    },
@@ -601,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "139ebac1",
+   "id": "ab44f3e0",
    "metadata": {
     "hide-output": false
    },
@@ -619,7 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8aaf4881",
+   "id": "e4762ad6",
    "metadata": {
     "hide-output": false
    },
@@ -636,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "195cd9f4",
+   "id": "8dcb8c2f",
    "metadata": {
     "hide-output": false
    },
@@ -652,7 +643,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30aef89f",
+   "id": "2e8ed063",
    "metadata": {},
    "source": [
     "Here’s the plot of the Howard policy, as a function of $ y $ at the highest and lowest values of $ z $."
@@ -661,7 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5ef6648",
+   "id": "caccdfb1",
    "metadata": {
     "hide-output": false
    },
@@ -677,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "712c70ec",
+   "id": "9e891048",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +686,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dc07f6c",
+   "id": "34b212a4",
    "metadata": {},
    "source": [
     "Let’s plot the time taken by each of the solvers and compare them."
@@ -704,19 +695,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "773bfdea",
+   "id": "4f56e1d7",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "m_vals = range(5, 3000, 100)"
+    "m_vals = range(5, 600, 40)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3815148",
+   "id": "32defd3a",
    "metadata": {
     "hide-output": false
    },
@@ -732,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed312559",
+   "id": "2b2fe537",
    "metadata": {
     "hide-output": false
    },
@@ -749,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "930d3d5d",
+   "id": "d0adf8d9",
    "metadata": {
     "hide-output": false
    },
@@ -768,7 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a3a53236",
+   "id": "a1d60ced",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +779,7 @@
   }
  ],
  "metadata": {
-  "date": 1695173318.8903806,
+  "date": 1695354741.6235802,
   "filename": "opt_invest.md",
   "kernelspec": {
    "display_name": "Python",
