--- a/status.ipynb
+++ b/status.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "13b12b7b",
+   "id": "1f15162f",
    "metadata": {},
    "source": [
     "# Execution Statistics\n",
@@ -11,24 +11,24 @@
     "\n",
     "[](https://jax.quantecon.org/aiyagari_jax.html)[](https://jax.quantecon.org/arellano.html)[](https://jax.quantecon.org/cake_eating_numerical.html)[](https://jax.quantecon.org/ifp_egm.html)[](https://jax.quantecon.org/intro.html)[](https://jax.quantecon.org/inventory_dynamics.html)[](https://jax.quantecon.org/jax_intro.html)[](https://jax.quantecon.org/kesten_processes.html)[](https://jax.quantecon.org/markov_asset.html)[](https://jax.quantecon.org/mle.html)[](https://jax.quantecon.org/newtons_method.html)[](https://jax.quantecon.org/opt_invest.html)[](https://jax.quantecon.org/opt_savings.html)[](https://jax.quantecon.org/short_path.html)[](https://jax.quantecon.org/.html)[](https://jax.quantecon.org/troubleshooting.html)[](https://jax.quantecon.org/wealth_dynamics.html)[](https://jax.quantecon.org/zreferences.html)|Document|Modified|Method|Run Time (s)|Status|\n",
     "|:------------------:|:------------------:|:------------------:|:------------------:|:------------------:|\n",
-    "|aiyagari_jax|2023-09-19 23:49|cache|60.76|✅|\n",
-    "|arellano|2023-09-19 23:49|cache|37.03|✅|\n",
-    "|cake_eating_numerical|2023-09-19 23:50|cache|24.03|✅|\n",
-    "|ifp_egm|2023-09-19 23:51|cache|74.04|✅|\n",
-    "|intro|2023-09-19 23:51|cache|4.02|✅|\n",
-    "|inventory_dynamics|2023-09-19 23:58|cache|420.93|✅|\n",
-    "|jax_intro|2023-09-19 23:59|cache|37.8|✅|\n",
-    "|kesten_processes|2023-09-19 23:59|cache|36.45|✅|\n",
-    "|markov_asset|2023-09-20 00:00|cache|25.03|✅|\n",
-    "|mle|2023-09-20 00:00|cache|21.03|✅|\n",
-    "|newtons_method|2023-09-20 00:03|cache|168.77|✅|\n",
-    "|opt_invest|2023-09-20 00:06|cache|180.09|✅|\n",
-    "|opt_savings|2023-09-20 00:07|cache|61.66|✅|\n",
-    "|short_path|2023-09-20 00:07|cache|11.02|✅|\n",
-    "|status|2023-09-20 00:07|cache|3.99|✅|\n",
-    "|troubleshooting|2023-09-19 23:51|cache|4.02|✅|\n",
-    "|wealth_dynamics|2023-09-20 00:08|cache|36.03|✅|\n",
-    "|zreferences|2023-09-19 23:51|cache|4.02|✅|\n",
+    "|aiyagari_jax|2023-09-22 00:25|cache|58.99|✅|\n",
+    "|arellano|2023-09-22 00:26|cache|34.68|✅|\n",
+    "|cake_eating_numerical|2023-09-22 00:26|cache|22.54|✅|\n",
+    "|ifp_egm|2023-09-22 00:27|cache|72.86|✅|\n",
+    "|intro|2023-09-22 00:28|cache|1.43|✅|\n",
+    "|inventory_dynamics|2023-09-22 00:34|cache|412.11|✅|\n",
+    "|jax_intro|2023-09-22 00:35|cache|36.47|✅|\n",
+    "|kesten_processes|2023-09-22 00:36|cache|35.71|✅|\n",
+    "|markov_asset|2023-09-22 00:36|cache|23.84|✅|\n",
+    "|mle|2023-09-22 00:36|cache|19.58|✅|\n",
+    "|newtons_method|2023-09-22 00:39|cache|164.08|✅|\n",
+    "|opt_invest|2023-09-22 00:40|cache|39.98|✅|\n",
+    "|opt_savings|2023-09-22 00:40|cache|24.8|✅|\n",
+    "|short_path|2023-09-22 00:40|cache|11.02|✅|\n",
+    "|status|2023-09-22 00:40|cache|4.09|✅|\n",
+    "|troubleshooting|2023-09-22 00:28|cache|1.43|✅|\n",
+    "|wealth_dynamics|2023-09-22 00:41|cache|35.03|✅|\n",
+    "|zreferences|2023-09-22 00:28|cache|1.43|✅|\n",
     "\n",
     "<a id='status-machine-details'></a>\n",
     "These lectures are built on `linux` instances through `github actions`  and `amazon web services (aws)` to\n",
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "53f788c3",
+   "id": "600b3e38",
    "metadata": {
     "hide-output": false
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05d95d22",
+   "id": "6f1c7b2e",
    "metadata": {},
    "source": [
     "and the hardware we are running on:"
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4eb5b6c",
+   "id": "5fc60411",
    "metadata": {
     "hide-output": false
    },
@@ -74,7 +74,7 @@
   }
  ],
  "metadata": {
-  "date": 1695173318.977975,
+  "date": 1695354741.7065916,
   "filename": "status.md",
   "kernelspec": {
    "display_name": "Python",
