--- a/short_path.ipynb
+++ b/short_path.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1c09edfc",
+   "id": "4c102c01",
    "metadata": {},
    "source": [
     "# Shortest Paths"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c79cbde4",
+   "id": "69178210",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49042481",
+   "id": "37a869c2",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -37,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d82ac2f7",
+   "id": "bcae3bb2",
    "metadata": {
     "hide-output": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "557f5b04",
+   "id": "df01026d",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e074eadd",
+   "id": "2101cdc3",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a65093d",
+   "id": "81f0462b",
    "metadata": {},
    "source": [
     "## Solving for Minimum Cost-to-Go\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a3b7075",
+   "id": "8c78466c",
    "metadata": {},
    "source": [
     "### The Algorithm\n",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5285e51e",
+   "id": "e94ecf0c",
    "metadata": {
     "hide-output": false
    },
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e568e9b",
+   "id": "6fd48381",
    "metadata": {},
    "source": [
     "Notice that the cost of staying still (on the principle diagonal) is set to\n",
@@ -150,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb73c7c1",
+   "id": "ffe60115",
    "metadata": {
     "hide-output": false
    },
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7c3db9c",
+   "id": "d67a9ec8",
    "metadata": {},
    "source": [
     "We can further optimize the above code by using [jax.lax.while_loop](https://jax.readthedocs.io/en/latest/_autosummary/jax.lax.while_loop.html). The extra acceleration is due to the fact that the entire operation can be optimized by the JAX compiler and launched as a single kernel on the GPU."
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c810260c",
+   "id": "684c346f",
    "metadata": {
     "hide-output": false
    },
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719a60a7",
+   "id": "5d5e4f49",
    "metadata": {
     "hide-output": false
    },
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ac13f21",
+   "id": "f5a00053",
    "metadata": {
     "hide-output": false
    },
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54e26928",
+   "id": "7ad01fc8",
    "metadata": {},
    "source": [
     "Let’s see the timing for JIT compilation of the functions and runtime results."
@@ -243,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0bda9966",
+   "id": "2cd9f3ac",
    "metadata": {
     "hide-output": false
    },
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97a863a5",
+   "id": "0dfa7885",
    "metadata": {},
    "source": [
     "Now, this runs faster once we have the JIT compiled JAX version of the functions."
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ff8a4ce",
+   "id": "4f20d64f",
    "metadata": {
     "hide-output": false
    },
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2de3bb89",
+   "id": "9bd172c5",
    "metadata": {},
    "source": [
     ">**Note**\n",
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "034980ac",
+   "id": "34593ad4",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8dc6f9ca",
+   "id": "782638a5",
    "metadata": {},
    "source": [
     "## Exercise 9.1\n",
@@ -320,7 +320,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0403d49",
+   "id": "bca1bbd9",
    "metadata": {
     "hide-output": false
    },
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5e193a0",
+   "id": "19cc3699",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#short_path_ex1)\n",
@@ -442,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e6e4d39",
+   "id": "df5bb6d2",
    "metadata": {
     "hide-output": false
    },
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c4dbc55",
+   "id": "c2015ad2",
    "metadata": {},
    "source": [
     "Let’s write a function `compute_cost_to_go` that returns $ J $ given any valid $ Q $."
@@ -481,7 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83cafbb1",
+   "id": "12a2ea40",
    "metadata": {
     "hide-output": false
    },
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f37147af",
+   "id": "9cdb560e",
    "metadata": {},
    "source": [
     "Finally, here’s a function that uses the `cost-to-go` function to obtain the\n",
@@ -525,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77550272",
+   "id": "7116567f",
    "metadata": {
     "hide-output": false
    },
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "977e3194",
+   "id": "4f4a91ad",
    "metadata": {},
    "source": [
     "Okay, now we have the necessary functions, let’s call them to do the job we were assigned."
@@ -555,7 +555,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "784dd342",
+   "id": "c0c82a81",
    "metadata": {
     "hide-output": false
    },
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c94e7119",
+   "id": "d2ab9000",
    "metadata": {},
    "source": [
     "Let’s see the timings for jitting the function and runtime results."
@@ -575,7 +575,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d25aac30",
+   "id": "751d7865",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a4559fa",
+   "id": "07ff9f50",
    "metadata": {
     "hide-output": false
    },
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41312990",
+   "id": "bb03c615",
    "metadata": {
     "hide-output": false
    },
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ddc2541",
+   "id": "bd05dda3",
    "metadata": {},
    "source": [
     "The total cost of the path should agree with $ J[0] $ so let’s check this."
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28192daf",
+   "id": "ed360631",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   }
  ],
  "metadata": {
-  "date": 1695173318.956384,
+  "date": 1695354741.6865041,
   "filename": "short_path.md",
   "kernelspec": {
    "display_name": "Python",
